# ttb-regs-download

./: .gitignore  README.md  example.env  pyproject.toml
code/: download_ecfr_titles.py  upsert_to_db.py  utils.py
docs/: ecfr_data_model.dbml  ecfr_data_model.sql
