[project]
name = "ttb-regs-download"
version = "0.1.0"
description = "Downloads regulation text & characteristics from the eCFR API and saves into standardized duckdb format."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb<1.4",
    "lxml>=6.0.1",
    "markitdown>=0.1.3",
    "pandas>=2.0.0",
    "python-dotenv>=1.1.1",
    "tqdm>=4.67.1",
    "wakepy>=0.10.2.post1",
]
